--- a/docs/gemini-setup.mdx
+++ b/docs/gemini-setup.mdx
@@ -23,7 +23,7 @@ Google's Gemini 2.0 Flash is our chosen LLM for this workshop because it offers:
 
 ### Step 1: Access Google AI Studio
 
-Navigate to [Google AI Studio](https://makersuite.google.com/app/apikey) and sign in with your Google account.
+Navigate to [Google AI Studio](https://aistudio.google.com/app/apikey) and sign in with your Google account.
 
 You may be prompted to accept Google's AI Studio terms and conditions:
 
