--- a/docs/objectives-overview.mdx
+++ b/docs/objectives-overview.mdx
@@ -17,24 +17,12 @@ Create intelligent agents that can process, understand, and interact with PDF do
 - **Reason & Act** - Build agents using the ReAct pattern (Reasoning + Acting)
 - **Chat Interface** - Natural conversations about document content
 
-## 🛤️ Two Learning Paths
-
-### Path 1: Python + Jupyter + LangChain
-**Best for:** Developers who want to understand the code and algorithms
+### Python + Jupyter + LangChain
 
 **What you'll do:**
 - Work with pre-generated embeddings from the enhanced notebook
 - Use MongoDB Atlas Local (Docker-based)
 - Build ReAct agents with LangChain
-- Complete 4 hands-on exercises
-
-### Path 2: n8n Visual Workflows  
-**Best for:** No-code/low-code builders and workflow automation
-
-**What you'll do:**
-- Visual drag-and-drop interface
-- Pre-built nodes for PDF processing
-- Create webhook-based agent workflows
 - Complete 4 hands-on exercises
 
 ## 📚 Technologies Used
