--- a/docs/prerequisites.mdx
+++ b/docs/prerequisites.mdx
@@ -17,7 +17,7 @@ To complete this workshop successfully, you'll need:
 1. **Voyage AI API Key** - For state-of-the-art multimodal embeddings
 2. **Google Gemini API Key** - For the LLM with function calling capabilities
 3. **MongoDB Atlas Cluster** - For vector storage and search
-4. **Python 3.8+** - With Jupyter notebook support
+4. **GitHub Codespaces** Access to [GitHub Codespaces](https://codespaces.new/mrlynn/multimodal-agents-lab)
 
 ---
 
